# brain-storm

./: .gitignore  README.md  index.html  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
assets/: index-BJlZIKS5.js  index-BsXlbIjF.css  index-BtCCjme5.js  index-D8Gt56gI.css  index-DXoc-KYI.js  index-fpzbCIuS.js
docs/: eda.md  index.html
docs/assets/: index-BX_Up5xg.css  index-DdgsVWEr.js
environments/: environment.yml  pace.yml
pages/: bun.lockb  index.html  package.json  vite.config.ts
pages/public/: 404.html
pages/src/: App.tsx  index.css
pages/src/components/: layout.tsx
pages/src/components/ui/: divider.tsx  image.tsx  text.tsx
pages/src/lib/: copy.ts  redirect.ts
pages/src/pages/report/: report.tsx
src/daikon/: __init__.py
src/daikon/eda/: __init__.py  clustering.py  dataclasses.py  image_metrics.py
src/daikon/models/: __init__.py  dataclasses.py  dataset.py  eval.py  models.py
src/daikon/preprocessing/: preprocessing.py
tests/: eda_visualization.ipynb  histogram_clustering.ipynb  training_loss_visualization.ipynb
workflows/: Snakefile  setup_slurm.sh
workflows/config/: config.yaml
workflows/rules/: eda.smk  preprocessing.smk  training.smk
workflows/scripts/: eda.py  image_dim_dist.py
workflows/scripts/eda/: class_histogram.py  class_rings.py  eda.py  eda_folder.py  histogram_clustering.py  image_dim_dist.py  rings_clustering.py  visualize_clustering.py
workflows/scripts/preprocessing/: preprocess.py
workflows/scripts/training/: model_eval.py  model_eval_vis.py  training.py  training_loss.py
(+95 files in other folders)
