[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daikon"
version = "0.0.1"
description = "Package of all helper functions for performing brain tumor classification using machine learning"
dependencies = [
  "tqdm",
  "numpy",
  "opencv-python",
  "dill"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

